--- a/ideia aplicativo jogo/projeto/app/src/main/res/values-ko-rKR/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values-ko-rKR/strings.xml
@@ -12,6 +12,10 @@
     <string name="diga_amigos">너의 남사친(들) 어때요?</string>
     <string name="diga_amigas">너의 여성 친구(들) 어때요?</string>
     <string name="diga_amigos_e_amigas">너의 이성친구(들) 어때요?</string>
+    <string name="aceite_primeiro">게임하기 전에 약관에 동의해야합니다.</string>
+    <string name="ir_regras">가</string>
+    <string name="depois">더 늦은</string>
+    <string name="motivar">대답하지:</string>
 
     <string name="a">aa</string>
 
