--- a/ideia aplicativo jogo/projeto/app/src/main/res/values-ko-rKR/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values-ko-rKR/strings.xml
@@ -461,6 +461,7 @@
 
     <!--não usar esse string array mesmo na versão coreana-->
     <string-array name="chickenparts">
+        <item> </item>
         <item>볏</item>
         <item>눈</item>
         <item>부리</item>
@@ -486,7 +487,7 @@
     </string-array>
 
     <string-array name="chickenparts_Korean_use_only">
-
+        <item> </item>
         <item>볏</item>
         <item>눈</item>
         <item>부리</item>
