--- a/ideia aplicativo jogo/projeto/app/src/main/res/values-pt/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values-pt/strings.xml
@@ -459,7 +459,7 @@
     </string-array>
 
     <string-array name="chickenparts">
-        <item> </item>
+        <item> - </item>
         <item>Crista</item>
         <item>Olhos</item>
         <item>Bico</item>
