--- a/ideia aplicativo jogo/projeto/app/src/main/res/values-ko-rKR/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values-ko-rKR/strings.xml
@@ -487,7 +487,7 @@
     </string-array>
 
     <string-array name="chickenparts_Korean_use_only">
-        <item> </item>
+        <item> - </item>
         <item>볏</item>
         <item>눈</item>
         <item>부리</item>
