--- a/ideia aplicativo jogo/projeto/app/src/main/res/values/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values/strings.xml
@@ -456,7 +456,7 @@
     </string-array>
 
     <string-array name="chickenparts">
-        <item> </item>
+        <item> - </item>
         <item>Crest</item>
         <item>Eyes</item>
         <item>Beak</item>
@@ -482,7 +482,7 @@
     </string-array>
 
     <string-array name="chickenparts_Korean_use_only">
-        <item> </item>
+        <item> - </item>
         <item>볏</item>
         <item>눈</item>
         <item>부리</item>
