--- a/ideia aplicativo jogo/projeto/app/src/main/res/values-pt/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values-pt/strings.xml
@@ -484,8 +484,8 @@
         <item>Coxas</item>
         <item>Sobrecoxa</item>
         <item>Sobrecoxas</item>
-        <item>Pé</item>
-        <item>Pés</item>
+        <item>Pata</item>
+        <item>Patas</item>
     </string-array>
 
     <string-array name="thingstodo">
