--- a/ideia aplicativo jogo/projeto/app/src/main/res/values-pt/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values-pt/strings.xml
@@ -540,18 +540,18 @@
     </string-array>
 
     <string-array name="chickenparts_Korean_use_only">
-        <item> </item>
+        <item> - </item>
         <item>볏</item>
         <item>눈</item>
         <item>부리</item>
         <item>사낭</item>
         <item>날개</item>
-        <item>Plumagem</item>
+        <item>깃털들</item>
         <item>가슴살</item>
         <item>위</item>
         <item>심장</item>
         <item>간</item>
-        <item>Tripas</item>
+        <item>닭 내장</item>
         <item>머리</item>
         <item>피부</item>
         <item>발톱</item>
