--- a/ideia aplicativo jogo/projeto/app/src/main/res/values/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values/strings.xml
@@ -6,6 +6,11 @@
     <string name="mensagememail">Please, describe all details of the bug which you found.</string>
     <string name="enunciadointentbug">Choose a email client to proceed</string>
 
+    <!--idiomas-->
+    <string name="idioma_portugues">pt</string>
+    <string name="idioma_coreano">ko</string>
+    <string name="idioma_ingles">en</string>
+
     <!--menus de seleção-->
 
     <!--nomes das redes sociais-->
